# r64u

./: .clang-format  .clang-tidy  .gitignore  .hone-gates.json  .stride.md  AGENTS.md  CHANGELOG.md  CHARTER.md  CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.bak  LICENSE  Makefile  README.md  SPEC.md  U64-video.md  build_test.sh  cmake_install.cmake  visual.md
.beads/: issues.jsonl  last-touched
.github/workflows/: build.yml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
audit/: maintain-2026-05-09-053220-actions.md  maintain-2026-05-09-053311-actions.md  maintain-2026-05-11-031125-actions.md  maintain-2026-05-12-031613-actions.md  maintain-2026-05-13-031843-actions.md  maintain-2026-05-14-025505-actions.md  maintain-2026-05-15-033522-actions.md  maintain-2026-05-16-080008-actions.md  maintain-2026-05-17-030349-actions.md  maintain-2026-05-17-070812-actions.md  maintain-2026-05-18-025052-actions.md  maintain-2026-05-19-actions.md  maintain-2026-05-21-043311-actions.md  maintain-2026-06-17-040743-actions.md  maintain-2026-06-25-023621-actions.md  maintain-2026-06-26-021141-actions.md  maintain-2026-06-26-021223-actions.md  maintain-2026-07-02-020259-actions.md
cmake/: Coverage.cmake  Formatting.cmake  Quality.cmake  Sanitizers.cmake  StaticAnalysis.cmake
docs/: PRG-spec.md  QUALITY.md  REST-spec.md  SID-spec.md  c64-openapi.yaml  d64-spec.md  font-spec.md
packaging/: README.md  build-appimage.sh  r64u.desktop
resources/: Info.plist.in  app.rc  r64u.entitlements  r64u.qrc
resources/icons/: app.icns
resources/themes/: theme-dark.qss  theme-light.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h  version.h.in
src/core/: avicore.h  diskbootsequencecore.cpp  diskbootsequencecore.h  diskimagereader.cpp  diskimagereader.h  favoritescore.cpp  favoritescore.h  favoritesuicore.h  fileactioncore.h  filebrowsercore.cpp  filebrowsercore.h  filetypecore.h  ftpclientmixin.h  ftpcore.cpp  ftpcore.h  hvscparser.cpp  petsciiconverter.cpp  petsciiconverter.h  playlistcore.cpp  playlistcore.h  remotefiletreecore.cpp  remotefiletreecore.h  restresponsecore.cpp  restresponsecore.h  sidfileparser.cpp  sidfileparser.h  songlengthsparser.h  streamprotocolcore.h  transferconfirmcore.cpp  transfercore.cpp  transfercore.h  transferdecisioncore.cpp  transferdecisioncore.h  transferftpcore.cpp  transferftpcore.h  transfertypes.h  videostreamcore.h
src/ftp/: folderoperationcoordinator.cpp  folderoperationcoordinator.h  recursivescancoordinator.cpp  recursivescancoordinator.h  remotedirectorycoordinator.cpp  remotedirectorycoordinator.h  remotedirectorycreator.cpp  remotedirectorycreator.h  remotelistingcoordinator.cpp  remotelistingcoordinator.h
src/models/: batchmanager.cpp  batchmanager.h  configurationmodel.cpp  configurationmodel.h  localfileproxymodel.cpp  localfileproxymodel.h  remotefilemodel.cpp  remotefilemodel.h  singlefileenqueuehandler.cpp  singlefileenqueuehandler.h  transferdeletehandler.cpp  transferdeletehandler.h  transferdispatchhandler.cpp  transferdispatchhandler.h  transfereventhandler.cpp  transfereventprocessor.cpp  transfereventprocessor.h  transferftphandler.cpp  transferftphandler.h  transfermanager.cpp  transfermanager.h  transferorchestrator.cpp  transferorchestrator.h  transferqueue.cpp  transferqueue.h  transfertimeoutmanager.cpp  transfertimeoutmanager.h  transferwiring.cpp  transferwiring.h
src/services/: audioplaybackservice.cpp  audioplaybackservice.h  audiostreamcore.cpp  audiostreamcore.h  audiostreamreceiver.cpp  audiostreamreceiver.h  avicore.cpp  avicore.h  (+197 more)
tests/: CMakeLists.txt  UNTESTED_FILES.md  test_audioplaybackservice.cpp  test_audiostreamcore.cpp  test_audiostreamreceiver.cpp  test_audiostreamreceiverservice.cpp  test_avicore.cpp  test_batchmanager.cpp  test_batchprogresswidget.cpp  test_c64previewbase.cpp  test_c64uftpclient_protocol.cpp  test_c64urestclient.cpp  test_cacheddownloadmanager.cpp  test_cacheddownloadservice.cpp  test_configfileloader.cpp  test_configfileloaderservice.cpp  test_configitemspanel.cpp  test_configpanel.cpp  test_configurationmodel.cpp  test_configurationservice.cpp  test_connectionstatuswidget.cpp  test_connectiontesthandler.cpp  test_connectionuicontroller.cpp  test_coordinators.cpp  test_databasedownloadcontroller.cpp  test_deviceactionservice.cpp  test_deviceconnection.cpp  test_deviceconnectionmanager.cpp  test_diskbootsequencecore.cpp  test_diskbootsequenceservice.cpp  test_diskimagereader.cpp  test_drivestatuswidget.cpp  test_errorhandler.cpp  test_errorsourceconnector.cpp  test_explorecontextmenu.cpp  test_explorecontextmenucontroller.cpp  test_explorefavoritescontroller.cpp  test_explorenavigationcontroller.cpp  test_explorepanelcore.cpp  test_favoritescore.cpp  (+96 more)
tests/integration/: test_realdevice_download.cpp
tests/mocks/: mockaudioplaybackservice.cpp  mockaudioplaybackservice.h  mockaudiostreamreceiver.cpp  mockaudiostreamreceiver.h  mockaudiostreamreceiverservice.cpp  mockaudiostreamreceiverservice.h  mockconnectionstatusview.h  mockcredentialstore.h  mockdetailsdisplay.h  mockfiledownloader.cpp  mockfiledownloader.h  mockfiledownloaderservice.cpp  mockfiledownloaderservice.h  mockftpclient.cpp  mockftpclient.h  mocklocalfilesystem.cpp  mocklocalfilesystem.h  mocklocalfilesystemservice.cpp  mocklocalfilesystemservice.h  mockmessagepresenter.h  mocknavigationview.h  mocknetworkinterfaceprovider.h  mockrestclient.cpp  mockrestclient.h  mockstreamcontrolclient.cpp  mockstreamcontrolclient.h  mockstreamcontrolservice.cpp  mockstreamcontrolservice.h  mockvideostreamreceiver.cpp  mockvideostreamreceiver.h  mockvideostreamreceiverservice.cpp  mockvideostreamreceiverservice.h
tests/services/: c64uftpclient.cpp  c64uftpclient.h  c64urestclient.cpp  c64urestclient.h
tests/stubs/: errorsourceconnector_stub.cpp  errorsourceconnector_test_stubs.cpp  explorenavigationcontroller_test_stubs.cpp  filedetailspanel_test_stubs.cpp  panelcoordinator_test_stubs.cpp  playlistmanager_test_stubs.cpp  playlistservice_test_stubs.cpp  streamingmanager_stub.cpp  streamingservice_stub.cpp  viewpanel_test_stubs.cpp
(+111 files in other folders)
